<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_title"
        android:id="@+id/nameInput"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/radio_group">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income_title"
            android:id="@+id/type_income"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_title"
            android:id="@+id/type_expense"/>
    </RadioGroup>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/iconInput"
        android:autofillHints="@string/category_title">

    </Spinner>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OK"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:id="@+id/createCategory"
        android:onClick="onCategoryDialogAddRequest"/>

</LinearLayout>