<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/color_while"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/income"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="INCOME"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:textColor="@color/color_while"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:gravity="end"
                    android:paddingRight="10dp"
                    android:textSize="16sp"
                    android:hint="@string/price_title"
                    android:id="@+id/frag_addincome_price"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="đ"
                android:textSize="20sp"
                android:padding="10dp"
                android:gravity="center_vertical|center"/>

        </LinearLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/category_title"
            android:id="@+id/frag_addincome_spinner">

        </android.support.v7.widget.AppCompatSpinner>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_title"
                android:id="@+id/frag_addincome_date"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>



</LinearLayout>