<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/color_while"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_monetization"
                android:tint="@color/expense"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:gravity="end"
                    android:textSize="20sp"
                    android:paddingRight="10dp"
                    android:hint="@string/price_title"
                    android:id="@+id/frag_expense_price"
                    android:textColor="@color/expense"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="đ"
                android:textSize="20sp"
                android:padding="10dp"
                android:gravity="center_vertical|center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/category_title"
                android:id="@+id/frag_expense_spinner"
                android:spinnerMode="dropdown">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_event_note_black_24dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="9"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_title"
                    android:id="@+id/frag_expense_date"
                    android:paddingHorizontal="10sp"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_short_text_black_24dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="9">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/note_title"
                    android:paddingHorizontal="10sp"
                    android:textColor="#333"
                    android:id="@+id/frag_expense_note"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ADD"
            android:layout_gravity="center"
            android:backgroundTint="@color/expense"
            android:textColor="@color/color_while"
            android:id="@+id/frag_expense_submit"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    </LinearLayout>

</LinearLayout>